# telepathy-phoenix

./: .gitignore  Makefile.am  NEWS  README  configure.ac
data/: Makefile.am
data/dbus-services/: Phoenix.Authenticator.service.in
data/phoenix/: Makefile.am
data/phoenix/dbus-services/: Phoenix.Approver.service.in  Phoenix.EchoCall.service.in  Phoenix.EchoText.service.in
data/phoenix/telepathy-clients/: Phoenix.EchoCall.client
data/phoenix/uninstalled/: Makefile.am
data/phoenix/uninstalled/dbus-1/services/: Phoenix.Approver.service.in  Phoenix.Authenticator.service.in  Phoenix.EchoCall.service.in  Phoenix.EchoText.service.in
data/phoenix/uninstalled/telepathy/clients/: Phoenix.Approver.client.in  Phoenix.EchoText.client.in
data/telepathy-clients/: Phoenix.Authenticator.client
src/: Makefile.am  authenticator.c  echo-call-info-dbus.c  echo-call-info-dbus.h  echo-call-info.xml  echo-call.c  echo-text.py  phoenix-approver  phoenix-test.in  phoenix-test.py  phoenix.in  phoenix.py  util.py
tools/: Makefile.am
